After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751786 - lua-factory: Fix possible memleak if source registration fails
lua-factory: Fix possible memleak if source registration fails
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2015-07-01 14:47 UTC by Bastien Nocera
Modified: 2015-07-07 15:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
lua-factory: Fix possible memleak if source registration fails (928 bytes, patch)
2015-07-01 14:47 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2015-07-01 14:47:49 UTC
.
Comment 1 Bastien Nocera 2015-07-01 14:47:53 UTC
Created attachment 306527 [details] [review]
lua-factory: Fix possible memleak if source registration fails

Spotted on #grilo
Comment 2 Victor Toso 2015-07-07 15:57:12 UTC
Review of attachment 306527 [details] [review]:

Yes!
Comment 3 Bastien Nocera 2015-07-07 15:58:30 UTC
Attachment 306527 [details] pushed as 30b8e07 - lua-factory: Fix possible memleak if source registration fails