lua-factory: Fix possible memleak if source registration fails

Spotted on #grilo

https://bugzilla.gnome.org/show_bug.cgi?id=751786